fix video spacing

--- a/static/main.css
+++ b/static/main.css
@@ -278,8 +278,8 @@ nav {
   height: 100vh;
   margin-left: 0 5%;
   margin-right: 0 5%;
-  margin-top: -120px;
-  margin-bottom: -80px;
+  margin-top: -100px;
+  margin-bottom: -50px;
 }
 
 .column {
